--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -1,46 +1,89 @@
 .landing-content h1, h2{
   text-align: center;
+  margin-top: 80px;
+  font-family: 'Work Sans', sans-serif;
 }
 
-.logo h3{
+.landing-content h2 {
+  font-weight: 100;
+  color: #a6a6a6;
+  font-family: 'Work Sans', sans-serif;
+}
+
+/*.logo h3{
   text-align: left;
+}*/
+
+
+/*Styles for Navbar*/
+div.container {
+  width: 100%;
+  padding: 0px;
+
 }
 
-.navbar link {
-  text-align: right;
+div.container .navbar {
+  padding-top: 20px;
+  height: 72px;
+  border-bottom: 2px solid #e9e9e9;
 }
 
-.podcast {
-  background-color: black;
+.navbar a {
+  float: right;
+  padding-top: 20px;
+  margin-right: 25px;
+  height: 72px;
+  color: #f44336;
+  padding-right: 10px;
+  font-weight: bold;
+  font-family: 'Work Sans', sans-serif;
 }
 
-.podcast-list li {
+.navbar .logo {
+  float: left;
+  padding-top: 20px;
+  margin-left: 25px;
+  height: 72px;
+  color: black;
+  font-size: 20px;
+  letter-spacing: 1px;
+  font-family: 'Raleway', sans-serif;
+}
+
+
+.GridTile ul {
   list-style: none;
+  display: none;
 }
 
+/*.header, .container-links{
+  padding-top: 20px;
+  height: 72px;
+  border-bottom: 2px solid #e9e9e9;
+}*/
 /* addeded for material ui styles */
 
-body {
+/*body {
   margin: 0;
   font-size: 16px;
-}
+}*/
 
-a {
+/*a {
   color: #00bcd4;
   font-weight: bold;
   text-decoration: none;
   transition: color 0.4s;
-}
+}*/
 
-a:hover {
+/*a:hover {
   color: #1976d2;
 }
 
 .text-center {
   text-align: center;
-}
+}*/
 
-.top-bar {
+/*.top-bar {
   padding: 10px 15px;
   margin-bottom: 50px;
 }
@@ -86,4 +129,4 @@ a:hover {
 .success-message {
   padding: 0 16px;
   color: green;
-}
+}*/
