--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -1,49 +1,49 @@
-.landing-content h1, h2{
-  text-align: center;
-  margin-top: 80px;
-  font-family: 'Work Sans', sans-serif;
+.landing-content h1, h2 {
+    text-align: center;
+    margin-top: 80px;
+    font-family: 'Work Sans', sans-serif;
 }
 
-.row{
+.row {}
 
-}
 .mui-container-fluid, .col-md-4 {
-  display: inline;
-  text-align: center;
-
+    display: inline;
+    text-align: center;
 }
 
 .landing-container, .landing-content {
-  margin-top: 200px;
-  margin-bottom: 200px;
+    margin-top: 250px;
+    margin-bottom: 250px;
 }
+
 .landing-content h2 {
-  font-weight: 100;
-  color: #a6a6a6;
-  font-family: 'Work Sans', sans-serif;
+    font-weight: 100;
+    color: #a6a6a6;
+    font-family: 'Work Sans', sans-serif;
 }
 
 .fa {
-  color: #f44336;
-  padding-bottom: 10px;
+    color: #f44336;
+    padding-bottom: 10px;
 }
 
 .landing-container, .mui-col-md-4 h2 {
-font-size: 20px;
-font-family: 'Work Sans', sans-serif;
-letter-spacing: .5px;
-padding-bottom: 6px;
+    font-size: 20px;
+    font-family: 'Work Sans', sans-serif;
+    letter-spacing: .5px;
+    padding-bottom: 6px;
 }
 
 .mui-col-md-4 p {
-  font-weight: 100;
-  color: #a6a6a6;
-  font-family: 'Work Sans', sans-serif;
-  font-size: 17px;
-  text-align: center;
-  margin-left: 50px;
-  margin-right: 50px;
+    font-weight: 100;
+    color: #a6a6a6;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 17px;
+    text-align: center;
+    margin-left: 50px;
+    margin-right: 100px;
 }
+
 
 /*.logo h3{
   text-align: left;
@@ -51,19 +51,22 @@ padding-bottom: 6px;
 
 
 /*Styles for Navbar*/
-div.container {
-  width: 100%;
-  padding: 0px;
 
+div.container {
+    width: 100%;
+    padding: 0px;
 }
 
 div.container .navbar {
-  padding-top: 20px;
-  height: 72px;
-  border-bottom: 2px solid #e9e9e9;
+    padding-top: 20px;
+    height: 72px;
+    border-bottom: 2px solid #e9e9e9;
+    /*background-color: black;
+  opacity: 0.86;*/
 }
 
-.navbar a {
+
+/*.navbar .btn {
   float: right;
   padding-top: 20px;
   margin-right: 25px;
@@ -72,36 +75,78 @@ div.container .navbar {
   padding-right: 10px;
   font-weight: bold;
   font-family: 'Work Sans', sans-serif;
+}*/
+
+
+/*.navbar .btn btn-outline-primary {
+  background-color: yellow;
+}*/
+
+/*Sign in & Sign out button*/
+.navbar .btn {
+    float: right;
+    margin-top: 3px;
+    margin-right: 20px;
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: 300;
+    width: 84px;
+    height: 33px;
+    border-radius: 4px;
+    border: 1px solid #f44336;
+    background-color: #f44336;
+    color: white;
 }
+
+/*Register button*/
+.navbar .btn-outline {
+    float: right;
+    margin-top: 3px;
+    margin-right: 7px;
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: 300;
+    width: 84px;
+    height: 33px;
+    border-radius: 4px;
+    border: 1px solid #f44336;
+    background-color: white;
+    color: #f44336;
+}
+
 
 .navbar .logo {
-  float: left;
-  padding-top: 20px;
-  margin-left: 25px;
-  height: 72px;
-  color: black;
-  font-size: 20px;
-  letter-spacing: 1px;
-  font-family: 'Raleway', sans-serif;
+    float: left;
+    padding-top: 20px;
+    margin-left: 25px;
+    height: 72px;
+    color: black;
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-family: 'Raleway', sans-serif;
 }
-
 
 .GridTile ul {
-  list-style: none;
-  display: none;
+    list-style: none;
+    display: none;
 }
+
 
 /*.header, .container-links{
   padding-top: 20px;
   height: 72px;
   border-bottom: 2px solid #e9e9e9;
 }*/
+
+
 /* addeded for material ui styles */
+
 
 /*body {
   margin: 0;
   font-size: 16px;
 }*/
+
 
 /*a {
   color: #00bcd4;
@@ -110,6 +155,7 @@ div.container .navbar {
   transition: color 0.4s;
 }*/
 
+
 /*a:hover {
   color: #1976d2;
 }
@@ -117,6 +163,7 @@ div.container .navbar {
 .text-center {
   text-align: center;
 }*/
+
 
 /*.top-bar {
   padding: 10px 15px;
