--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -189,8 +189,8 @@ div.container .navbar {
     padding-bottom: 15px;
     padding-top: 30px;
     line-height: 28px;
-    margin-left: 70px;
-    margin-right: 70px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .container-signin .fa {
@@ -198,24 +198,70 @@ div.container .navbar {
   margin-top: 25px;
   background-repeat: no-repeat;
   background-size: 50px 50px;
-  padding-left: 110px;
+  padding-left: 100px;
   line-height: 50px;
 }
 .container-signin h1 {
-    padding-top: 40px;
+    padding-top: 43px;
     padding-right: 100px;
     font-family: 'Raleway', sans-serif;
-    font-size: 34px;
+    font-size: 30px;
     font-weight: 300;
     color: #343a3e;
 }
 
- .btn-signin {
+ .container-signin .btn-signin {
   margin-top: 40px;
-  /*background-color: #f44336;*/
+  font-size: 14px;
+  line-height: 14px;
+  font-weight: 300;
+  width: 84px;
+  height: 33px;
+  border-radius: 4px;
+  border: 1px solid #f44336;
+  background-color: #f44336;
+  color: white;
 
 }
 
-.form {
-    background-color: ;
+.field .email {
+    padding: 0 15px;
+    height: 40px;
+    width: 375px;
+    background: #f1f1f2;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    border: 0;
+    margin: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    outline: 0;
+    font-size: 20px;
+    font-weight: 100;
+    color: #8a9199;
+    font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin-bottom: 13px;
+
+
+}
+
+.field .password {
+    padding: 0 15px;
+    height: 40px;
+    width: 375px;
+    background: #f1f1f2;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    border: 0;
+    margin: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    outline: 0;
+    font-size: 20px;
+    font-weight: 100;
+    color: #8a9199;
+    font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
+    margin-bottom: 13px;
+
+
 }
