--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -189,8 +189,9 @@ div.container .navbar {
     padding-bottom: 15px;
     padding-top: 30px;
     line-height: 28px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+    letter-spacing: 0.5px;
 }
 
 .container-signin .fa {
@@ -198,12 +199,12 @@ div.container .navbar {
   margin-top: 25px;
   background-repeat: no-repeat;
   background-size: 50px 50px;
-  padding-left: 100px;
+  padding-left: 125px;
   line-height: 50px;
 }
 .container-signin h1 {
     padding-top: 43px;
-    padding-right: 100px;
+    padding-right: 140px;
     font-family: 'Raleway', sans-serif;
     font-size: 30px;
     font-weight: 300;
@@ -215,12 +216,13 @@ div.container .navbar {
   font-size: 14px;
   line-height: 14px;
   font-weight: 300;
-  width: 84px;
-  height: 33px;
+  width: 100px;
+  height: 50px;
   border-radius: 4px;
   border: 1px solid #f44336;
   background-color: #f44336;
   color: white;
+  letter-spacing: 1px;
 
 }
 
