added masonry to podcast-list compo and revamped grid layout

--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -265,3 +265,30 @@ div.container .navbar {
     font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
     margin-bottom: 13px;
 }
+
+/*Styles for Podcast-List Component */
+p {
+  font-size: 14px;
+  font-weight: 500;
+  text-align: left;
+}
+
+.my-gallery-class {
+}
+
+.podcast__item {
+  padding: 10px;
+  width: 400px;
+  text-align: center;
+}
+
+.podcast img {
+  border-radius: 150px;
+  vertical-align: middle;
+  text-align: center;
+}
+
+/*.podcast__item a {
+  text-align: center;
+  width: 2px;
+}*/
