--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -3,6 +3,18 @@
   transform-origin: center top;
 }*/
 
+
+/*Navbar Search*/
+
+.search {
+    border-radius: 2px;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center;
+    display: none;
+}
+
 .landing-content h1, h2 {
     text-align: center;
     margin-top: 80px;
@@ -195,13 +207,14 @@ div.container .navbar {
 }
 
 .container-signin .fa {
-  float: left;
-  margin-top: 25px;
-  background-repeat: no-repeat;
-  background-size: 50px 50px;
-  padding-left: 125px;
-  line-height: 50px;
+    float: left;
+    margin-top: 25px;
+    background-repeat: no-repeat;
+    background-size: 50px 50px;
+    padding-left: 125px;
+    line-height: 50px;
 }
+
 .container-signin h1 {
     padding-top: 43px;
     padding-right: 140px;
@@ -211,19 +224,18 @@ div.container .navbar {
     color: #343a3e;
 }
 
- .container-signin .btn-signin {
-  margin-top: 40px;
-  font-size: 14px;
-  line-height: 14px;
-  font-weight: 300;
-  width: 100px;
-  height: 50px;
-  border-radius: 4px;
-  border: 1px solid #f44336;
-  background-color: #f44336;
-  color: white;
-  letter-spacing: 1px;
-
+.container-signin .btn-signin {
+    margin-top: 40px;
+    font-size: 14px;
+    line-height: 14px;
+    font-weight: 300;
+    width: 100px;
+    height: 50px;
+    border-radius: 4px;
+    border: 1px solid #f44336;
+    background-color: #f44336;
+    color: white;
+    letter-spacing: 1px;
 }
 
 .field .email {
@@ -241,10 +253,8 @@ div.container .navbar {
     font-size: 20px;
     font-weight: 100;
     color: #8a9199;
-    font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin-bottom: 13px;
-
-
 }
 
 .field .password {
@@ -262,9 +272,10 @@ div.container .navbar {
     font-size: 20px;
     font-weight: 100;
     color: #8a9199;
-    font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin-bottom: 13px;
 }
+
 
 /*Styles for Podcast-List Component */
 
@@ -273,33 +284,34 @@ div.container .navbar {
     width: 80%;
     /*border: 3px solid green;*/
     padding: 10px;
+    margin-right: 50px;
 }
 
 p {
-  font-size: 14px;
-  font-weight: 500;
-  text-align: left;
+    font-size: 14px;
+    font-weight: 500;
+    text-align: left;
 }
 
 .my-gallery-class {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 .podcast__item {
-  /*padding: 5px;*/
-  width: 400px;
-  text-align: center;
-  border: 1px solid #e9e9e9;
-  background-color: #e9e9e9;
+    /*padding: 5px;*/
+    width: 400px;
+    text-align: center;
+    border: 1px solid #e9e9e9;
+    background-color: #e9e9e9;
 }
 
 .podcast img {
-  /*border: 1px solid #e9e9e9;*/
-  border-radius: 3px;
-  vertical-align: middle;
-  text-align: center;
-
+    /*border: 1px solid #e9e9e9;*/
+    border-radius: 3px;
+    vertical-align: middle;
+    text-align: center;
 }
+
 
 /*.featured-header {
 text-align: center;
@@ -307,12 +319,16 @@ text-align: center;
 
 }*/
 
-.featured-header p {
-  text-align: center;
-  display: inline;
-  padding-right: 15px;
-
+.featured-header {
+    margin-left: 341px;
 }
+
+.featured-header p {
+    display: inline;
+    padding-right: 10px;
+    padding-left: 1r5px;
+}
+
 
 /*.podcast__item a {
   text-align: center;
@@ -320,10 +336,10 @@ text-align: center;
 }*/
 
 .podcast .fa {
-color: #343a3e;
-padding-top: 10px;
+    color: #343a3e;
+    padding-top: 10px;
 }
 
 .test {
-  display: none;
+    display: none;
 }
