updated subscription, now getting back data from user subscriptions

--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -323,10 +323,25 @@ text-align: center;
     margin-left: 341px;
 }
 
+/*a:active {
+    text-decoration: underline;
+    color: black;
+}*/
+
+a:visited {
+  color: grey;
+}
+
+a:link {
+  color: black;
+}
+
+
 .featured-header p {
     display: inline;
     padding-right: 10px;
     padding-left: 1r5px;
+    /*color: black;*/
 }
 
 
