--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -27,10 +27,18 @@
 }
 
 .landing-container {
+  width: 100%;
   /*background-color: #f44336;*/
-  background-color: #fafafa;
+  /*background-color: #fafafa;*/
 
 }
+
+.mui-col-md-4 p {
+  /*background-color: black;*/
+  margin-left: 80px;
+  margin-right: 110px;
+}
+
 
 .mui-container-fluid, .col-md-4 {
   display: inline;
@@ -38,7 +46,7 @@
 }
 
 .landing-container, .landing-content {
-  margin-top: 150px;
+  margin-top: 275px;
   margin-bottom: 170px;
 }
 
@@ -97,11 +105,14 @@ div.container {
   /*margin: auto;*/
 }
 
+
+
 div.container .navbar {
-  padding-top: 20px;
+  padding-top: 40px;
+  padding-bottom: 50px;
   height: 72px;
-  border-bottom: 2px solid #e9e9e9;
-  padding-bottom: 60px;
+  /*border-bottom: 2px solid #e9e9e9;*/
+  padding-left: 60px;
 }
 
 .navbar .form-control {
@@ -318,22 +329,30 @@ div.container .navbar {
   margin-left: 80px;
 }*/
 
+.podcast-list-conatiner {
+  width: 100%;
+  margin: auto;
+}
+
+.podcast-list-conatiner .my-gallery-class {
+  width: 100%;
+  margin-left: -14.2px;
+}
+
 .podcast__item {
-  width: 300px;
+  /*width: 300px;*/
   text-align: center;
   border: 1px solid #fafafa;
   margin: 30px;
-  margin-left: 50px;
-
-
+  /*margin-left: 50px;*/
 
 }
 
 .podcast img {
   /*border: 1px solid #e9e9e9;*/
-  border-radius: 3px;
-  vertical-align: middle;
-  text-align: center;
+  /*border-radius: 3px;*/
+  /*vertical-align: middle;*/
+  /*text-align: center;*/
 }
 
 
@@ -344,12 +363,14 @@ text-align: center;
 }*/
 
 .featured-header {
-  margin-top: 15px;
+  /*margin-top: 1px;*/
   height: 40px;
- /*background-color: #f1f1f1;*/
-  /*border-radius: 40px;*/
+ background-color: #f1f1f1;
+  border-radius: 10px;
   text-align: center;
-  margin-left: 90px;
+  margin-left: 825px;
+  width: 250px;
+  vertical-align: middle;
 }
 
 /*width: 40%;
@@ -374,9 +395,12 @@ a:link {
 
 .featured-header p {
   display: inline-block;
-  margin-left: -20px;
-  padding-right: 54px;
-  /*text-align: center;*/
+  margin-left: 10px;
+  margin-right: 1px;
+  padding-right: 2px;
+  padding-left: 2px;
+  padding-top: 9px;
+  text-align: center;
 
   color: #262626;
 }
