--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -3,6 +3,19 @@
   transform-origin: center top;
 }*/
 
+.overlay {
+  /*display:none;*/
+    /*position: absolute;*/
+    /*width:100px;
+    height:100px;*/
+    /*background-color: gray;*/
+    /*top: 50px;
+    left: 50px;
+    padding: 10px;*/
+    color: black;
+    opacity: .2;
+}
+
 .alert{
   /*color: #e9e9e9;*/
   color: #a6a6a6;
@@ -324,7 +337,7 @@ div.container .navbar {
 /*Podcast-List Component Styles*/
 
 .my-gallery-class .fa {
-  /*color: #03A9F4;*/
+  color: #03A9F4;
   padding-bottom: 10px;
   padding-top: 10px;
 }
