--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -14,6 +14,7 @@
   background-repeat: no-repeat;
   opacity: .9;
   margin-left: 62px;
+  /*margin-left: 152px;*/
 }
 
 
@@ -205,6 +206,15 @@ div.container .navbar {
   color: #f44336;
 }
 
+.mui-col-md-12 .container-image {
+  margin-bottom: -100px;
+}
+
+.mui-col-md-12 .video{
+  text-align: center;
+  margin-bottom: 80px;
+}
+
 
 /*Media Styles for Landing Page Component*/
 
@@ -217,6 +227,22 @@ div.container .navbar {
     text-align: center;
     padding-bottom: 50px;
   }
+  .mui-col-md-12 .video{
+    text-align: center;
+    width: 100%;
+    padding-top: -200px;
+  }
+  .mui-col-md-12 .video-demo{
+    text-align: center;
+    margin-top: -100px;
+  }
+  .mui-col-md-12 .image-header {
+    display: none;
+  }
+  .mui-col-md-12 .container-image {
+    display: none;
+  }
+
 }
 
 
